Hung이 준 C1부분 피드백 반영 완료/ publish

--- a/singleTypeOutputMatchSimulation/singleTypeOutputMatchSimulation.csproj
+++ b/singleTypeOutputMatchSimulation/singleTypeOutputMatchSimulation.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\hyeokjoon.kwon\Dropbox\PC %282%29\Desktop\</PublishUrl>
+    <PublishUrl>C:\Users\hyeokjoon.kwon\Dropbox\PC %282%29\Desktop\Match Simulation\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>Match Simulation</ProductName>
     <PublisherName>MKS Match2group</PublisherName>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>8</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -165,5 +165,6 @@
   <ItemGroup>
     <None Include="Resources\[Naura] dual output 4___.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
