icon images were uploaded  /  Share to Eunbee

--- a/singleTypeOutputMatchSimulation/singleTypeOutputMatchSimulation.csproj
+++ b/singleTypeOutputMatchSimulation/singleTypeOutputMatchSimulation.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>Match Simulation</ProductName>
     <PublisherName>MKS Match2group</PublisherName>
-    <ApplicationRevision>8</ApplicationRevision>
+    <ApplicationRevision>11</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -73,6 +73,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>circuit-board_512Pix.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -165,6 +168,10 @@
   <ItemGroup>
     <None Include="Resources\[Naura] dual output 4___.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="circuit-board.ico" />
+    <Content Include="circuit-board_128pix.ico" />
+    <Content Include="circuit-board_512Pix.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
